# CudaPractice

./: CMakeLists.txt  README.md  main.cpp  preprocess.cpp  reduction.cu  rgba_to_grey.cu
